[project]
name = "ymc_node_joy"
description = "comfyui custom nodes to caption image with joy"
version = "1.0.0"

  [project.license]
  file = "LICENSE"

  [project.urls]
  Repository = "https://github.com/ymc-github/ymc_node_joy"

[tool.comfy]
PublisherId = "ymc-github"
DisplayName = "ymc_node_joy"
Icon = ""
